k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: anime-win-xp
  namespace: anime-win-xp
  labels:
    app: anime-win-xp
spec:
  type: ClusterIP
  selector:
    app: anime-win-xp
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
