k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: anime-win-xp
  namespace: anime-win-xp
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - exe.bot
      secretName: anime-win-xp-tls
  rules:
    - host: exe.bot
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: anime-win-xp
                port:
                  number: 80
